testimonial section styles  changes for dark mode and fix hero section

--- a/custom_static/css/hardhat.css
+++ b/custom_static/css/hardhat.css
@@ -27256,16 +27256,36 @@ blockquote {
 }
 
 .testimonial-item p {
-  font-size: 18px;
+  font-size: 16px;
   color: #555;
 }
 
 .testimonial-item h3 {
-  font-size: 20px;
+  font-size: 16px;
   color: #333;
   margin-top: 10px;
 }
+body.dark-mode .testimonial-section {
+  background-color: #333333 !important;
+  color: #ffffff;
+}
+body.dark-mode .testimonial-section {
+  background-color: #333333 !important;
+  color: #ffffff !important;
+}
 
+body.dark-mode .testimonials-title {
+  font-size: 32px !important;
+  color: #ffffff !important;
+}
+body.dark-mode .testimonial-contentp{
+  color: #ffffff !important;
+  font-size: 16px !important;
+}
+body.dark-mode .testimonial-content{
+  color: #ffffff !important;
+  font-size: 16px !important;
+}
 .prev-btn, .next-btn {
   position: absolute;
   top: 50%;
@@ -27294,7 +27314,7 @@ blockquote {
   background-color: #fff !important;
 }
 .testimonials-title{
-  font-size: 40px;
+  font-size: 32px;
   color: #333;
 }
 .sub-header{
@@ -27308,12 +27328,11 @@ blockquote {
 }
 .testimonial-contentp{
   font-style: italic;
-  font-size: 24px !important;
+  font-size: 16px !important;
 }
 
 
 h2 {
-    text-align: center;
     margin-bottom: 20px;
     color: #333;
 }
